--- a/ansible/test.yaml
+++ b/ansible/test.yaml
@@ -11,7 +11,7 @@
       debug:
         msg: "the segment is: {{segment_name}}"
     - name: List Hostswitch Profiles
-      nsxt_uplink_profiles_facts:
+      vmware.ansible_for_nsxt.nsxt_uplink_profiles_facts:
         hostname: "10.192.167.137"
         username: "admin"
         password: "Admin!23Admin"
