--- a/ansible/inventory/vsphere.yaml
+++ b/ansible/inventory/vsphere.yaml
@@ -1,6 +1,6 @@
 # Using aliases to local host for my inventory objects so I can attach variables to them
 vcenter:
   hosts:
-    vcenter1:
+    vcsa-01a:
       ansible_host: 127.0.0.1
       ansible_connection: local
