Added nsxt_create_segments role

--- a/ansible/nsxt_example_apply_license.yml
+++ b/ansible/nsxt_example_apply_license.yml
@@ -1,6 +1,6 @@
 ---
 ## Deploys an NSX-T environment
-- hosts: nsxt_managers_controllers
+- hosts: nsxt_managers
   connection: local
   become: yes
   gather_facts: False 
