--- a/ansible/nsxt_create_environment.yml
+++ b/ansible/nsxt_create_environment.yml
@@ -1,6 +1,6 @@
 ---
 ## Deploys an NSX-T environment
-- hosts: nsxt_managers_controllers
+- hosts: nsxt_managers
   connection: local
   become: no
   gather_facts: False
