--- a/ansible/roles/nsxt_create_segments/tasks/main.yml
+++ b/ansible/roles/nsxt_create_segments/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 # tasks file for roles/nsxt_create_segments
 - name: Create Segments
-  include: create_segments.yaml
-  loop: "{{ segment }}"
+  include_tasks: create_segments.yaml
+  loop: "{{ segments }}"
   loop_control:
-    loop_var: segment
+    loop_var: segmentvi
