--- a/docker/wordpress/compose.yaml
+++ b/docker/wordpress/compose.yaml
@@ -9,25 +9,24 @@ services:
       - db_data:/var/lib/mysql
     restart: always
     environment:
-      - MYSQL_ROOT_PASSWORD=somewordpress
+      - MYSQL_ROOT_PASSWORD=VMwareNinja1!
       - MYSQL_DATABASE=wordpress
       - MYSQL_USER=wordpress
-      - MYSQL_PASSWORD=wordpress
+      - MYSQL_PASSWORD=VMwareNinja1!
     expose:
       - 3306
       - 33060
   wordpress:
     image: wordpress:latest
-    volumes:
-      - wp_data:/var/www/html
     ports:
       - 80:80
     restart: always
     environment:
       - WORDPRESS_DB_HOST=db
       - WORDPRESS_DB_USER=wordpress
-      - WORDPRESS_DB_PASSWORD=wordpress
+      - WORDPRESS_DB_PASSWORD=VMwareNinja1!
       - WORDPRESS_DB_NAME=wordpress
 volumes:
   db_data:
-  wp_data:
+
+
